Fixed Model scrollbar whiteline

--- a/src/components/ModelViewer/ModelViewer.css
+++ b/src/components/ModelViewer/ModelViewer.css
@@ -1,6 +1,6 @@
 #model {
   background-color: black;
-  width: 99vw;
+  width: 100%;
   height: 100vh;
 }
 
